--- a/css/main.css
+++ b/css/main.css
@@ -8,5 +8,13 @@ header{
 }
 /*aside containers*/
 aside div{
+	margin: 30px 0 70px 0;
+}
+/*main article above the fold*/
+.mainArt{
 	margin-bottom: 70px;
+}
+/*main Img*/
+.mainImg{
+	margin-top: 30px;
 }
